--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,139 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:id="@+id/normalMap"
-            android:text="注册人数+1"
-            android:layout_marginTop="10dp"
-            android:background="@color/blue"
-       />
+    tools:context=".SetData">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.08"
+        android:background="#ffffff"
+        android:id="@+id/top"
+        >
         <TextView
-            android:id="@+id/text1"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            app:layout_constraintLeft_toRightOf="@id/normalMap"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/gray"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="首页"
             android:gravity="center"
-            android:textColor="@color/red"
+            android:textColor="#000"
+            android:textSize="20sp"
+            android:background="@drawable/border_bottom"
+            android:id="@+id/title"
             />
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:id="@+id/satelliteMap"
-            android:text="扫码总数+1"
-            android:background="@color/blue"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/normalMap"
-            />
-        <TextView
-            android:id="@+id/text2"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            app:layout_constraintLeft_toRightOf="@id/satelliteMap"
-            app:layout_constraintTop_toBottomOf="@id/text1"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/gray"
-            android:gravity="center"
-            android:textColor="@color/red"
-            />
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:id="@+id/nightMap"
-            android:text="个人扫码数+1"
-            android:background="@color/blue"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/satelliteMap"
-            />
-        <TextView
-            android:id="@+id/text3"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            app:layout_constraintTop_toBottomOf="@id/text2"
-            app:layout_constraintLeft_toRightOf="@id/nightMap"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/gray"
-            android:gravity="center"
-            android:textColor="@color/red"
-            />
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:id="@+id/getInputBox"
-            android:text="今日扫码数量+1"
-            android:layout_marginTop="10dp"
-            android:background="@color/blue"
-            app:layout_constraintTop_toBottomOf="@id/nightMap"
-            />
-        <TextView
-            android:id="@+id/text4"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintLeft_toRightOf="@id/getInputBox"
-            app:layout_constraintTop_toBottomOf="@id/text3"
-            android:layout_marginLeft="20dp"
-            android:background="@color/gray"
-            android:gravity="center"
-            android:textColor="@color/red"
-            />
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:id="@+id/ShowBarChart"
-            app:layout_constraintTop_toBottomOf="@id/text1"
-            app:layout_constraintLeft_toRightOf="@id/text2"
-            android:background="@color/blue"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="40dp"
-            android:text="显示统计图"
-            />
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:id="@+id/logistics"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="200dp"
-        app:layout_goneMarginLeft="50dp"
-        android:background="@color/blue"
-        android:layout_marginLeft="20dp"
-        android:text="物流"
-        />
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:id="@+id/mapService"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/logistics"
-        android:layout_marginBottom="200dp"
-        app:layout_goneMarginLeft="50dp"
-        android:background="@color/blue"
-        android:layout_marginLeft="20dp"
-        android:text="地图"
-        />
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:id="@+id/weather"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/mapService"
-            android:layout_marginBottom="200dp"
-            app:layout_goneMarginLeft="50dp"
-            android:background="@color/blue"
-            android:layout_marginLeft="20dp"
-            android:text="天气"
-            />
+    </android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.82"
+        android:background="@drawable/border_bottom"
+        android:id="@+id/content"
+        app:layout_constraintTop_toBottomOf="@id/top"
+        >
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="com.example.myapp.myapplication.HomeContent"
+            android:id="@+id/fragment_home"
+            >
 
+        </fragment>
 
+    </android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.10"
+        android:background="@drawable/border_top"
+        android:paddingTop="7dp"
+        app:layout_constraintTop_toBottomOf="@id/content"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:id="@+id/home"
+            >
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@mipmap/home_black"
+                android:id="@+id/homeIcon"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="首页"
+                android:textColor="#000"
+                android:gravity="center"
+                android:textSize="12sp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:id="@+id/carData"
+            >
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@mipmap/car_data_white"
+                android:id="@+id/carDataIcon"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="数据"
+                android:textColor="#000"
+                android:gravity="center"
+                android:textSize="12sp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:id="@+id/comment"
+            >
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@mipmap/comment_white"
+                android:id="@+id/commentIcon"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="评论"
+                android:textColor="#000"
+                android:gravity="center"
+                android:textSize="12sp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:id="@+id/my"
+            >
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@mipmap/my_white"
+                android:id="@+id/myIcon"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="我的"
+                android:textColor="#000"
+                android:gravity="center"
+                android:textSize="12sp"
+                />
+        </LinearLayout>
 
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
