--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -12,115 +12,333 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="标准地图"
-        android:id="@+id/normalMap"
-        />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="卫星地图"
-        android:id="@+id/satelliteMap"
-        android:layout_marginLeft="20px"
-        app:layout_constraintLeft_toRightOf="@id/normalMap"
-        />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="夜间地图"
-        app:layout_constraintLeft_toRightOf="@id/satelliteMap"
-        android:id="@+id/nightMap"
-        android:layout_marginLeft="20px"
-        />
+        android:orientation="horizontal"
+        android:id="@+id/mapStyle"
+        android:paddingLeft="50dp"
+        android:paddingRight="60dp"
+        >
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_style"
+            android:text="标准地图"
+
+            android:id="@+id/normalMap"
+            />
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="卫星地图"
+            android:id="@+id/satelliteMap"
+            android:background="@drawable/button_style"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintLeft_toRightOf="@id/normalMap"
+            />
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="夜间地图"
+            android:background="@drawable/button_style"
+            app:layout_constraintLeft_toRightOf="@id/satelliteMap"
+            android:id="@+id/nightMap"
+            android:layout_marginLeft="20dp"
+            />
+    </LinearLayout>
     <AutoCompleteTextView
-        android:layout_width="280dp"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.7"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="10dp"
         android:layout_height="40dp"
-        app:layout_constraintTop_toBottomOf="@id/normalMap"
-        android:layout_marginTop="20dp"
-        android:background="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/mapStyle"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/border"
         android:id="@+id/searchText"
         android:completionThreshold="1"
         android:inputType="text"
         android:maxLines="1"
         />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/normalMap"
-        android:layout_marginTop="20dp"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.2"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toBottomOf="@id/mapStyle"
+        android:layout_marginTop="10dp"
         android:text="搜索"
         app:layout_constraintLeft_toRightOf="@id/searchText"
         android:id="@+id/getInputBox"
+        android:background="@drawable/border"
         android:layout_marginLeft="20px"
         />
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/lightBlue"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.2"
+        android:background="@drawable/textview_style"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/makerInfo"
         >
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="导航"
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:layout_constraintWidth_percent="0.7"
+            android:id="@+id/leftInfo"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_percent="0.5"
+                android:orientation="horizontal"
+                android:id="@+id/topInfo"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                >
+                <TextView
+                    android:paddingLeft="20dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:maxLines="1"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/distanceInfo"
+                    android:textColor="#000"
+                    android:layout_marginBottom="5dp"
+                    android:textSize="20sp"
+                    />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:maxLines="1"
+                    app:layout_constraintTop_toBottomOf="@id/distanceInfo"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/streetInfo"
+                    android:textSize="20sp"
+                    android:textColor="#000"
+                    android:layout_marginBottom="5dp"
+                    />
+                <!--<Button-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_weight="1"-->
+                <!--android:layout_marginLeft="20dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:text="导航"-->
+                <!--android:background="@drawable/button_style"-->
+                <!--android:layout_marginTop="5dp"-->
+                <!--android:id="@+id/navi"-->
+                <!--app:layout_constraintRight_toRightOf="parent"-->
+                <!--/>-->
+                <!--<LinearLayout-->
+                    <!--android:layout_width="0dp"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:id="@+id/navi"-->
+                    <!--android:layout_marginLeft="20dp"-->
+                    <!--android:layout_marginTop="5dp"-->
+                    <!--android:orientation="vertical"-->
+                    <!--android:gravity="center"-->
+                    <!--&gt;-->
+                    <!--<ImageView-->
+                        <!--android:layout_width="35dp"-->
+                        <!--android:layout_height="35dp"-->
+                        <!--android:src="@mipmap/navi"-->
+                        <!--/>-->
+                    <!--<TextView-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="去这里"-->
+                        <!--android:textColor="#000"-->
+                        <!--android:gravity="center"-->
+                        <!--/>-->
+                <!--</LinearLayout>-->
+
+
+            </LinearLayout>
+            <TextView
+                android:paddingLeft="20dp"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent="0.8"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_percent="0.4"
+                android:maxLines="1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginLeft="10dp"
+                android:id="@+id/titleInfo"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:textSize="22dp"
+                />
+            <!--android:background="@drawable/border"-->
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:layout_constraintWidth_percent="0.3"
+            app:layout_constraintLeft_toRightOf="@id/leftInfo"
+            >
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/navi"
-            app:layout_constraintRight_toRightOf="parent"
-            />
-        <TextView
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:maxLines="1"
-            android:background="@color/LittleWhite"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="20dp"
-            android:id="@+id/distanceInfo"
-            android:gravity="center"
-            android:textColor="#000"
-            />
-        <TextView
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:maxLines="1"
-            android:background="@color/LittleWhite"
-            app:layout_constraintTop_toBottomOf="@id/distanceInfo"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/titleInfo"
+            android:orientation="vertical"
             android:gravity="center"
-            android:textSize="12sp"
-            android:textColor="#000"
-            android:textStyle="bold"
+            >
+            <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/navi"
             />
-        <TextView
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:maxLines="1"
-            android:background="@color/LittleWhite"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/distanceInfo"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/streetInfo"
+            <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="去这里"
+            android:textColor="#000"
             android:gravity="center"
-            android:textColor="#000"
             />
+            </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
+
+
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--app:layout_constraintHeight_percent="0.5"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:id="@+id/topInfo"-->
+            <!--android:paddingLeft="10dp"-->
+            <!--android:paddingRight="10dp"-->
+            <!--&gt;-->
+            <!--<TextView-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_weight="1"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:maxLines="1"-->
+                <!--android:background="@drawable/border"-->
+                <!--app:layout_constraintLeft_toLeftOf="parent"-->
+                <!--app:layout_constraintTop_toTopOf="parent"-->
+                <!--android:layout_marginTop="10dp"-->
+
+                <!--android:id="@+id/distanceInfo"-->
+                <!--android:gravity="center"-->
+                <!--android:textColor="#000"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--/>-->
+            <!--<TextView-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_weight="1"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:maxLines="1"-->
+                <!--android:background="@drawable/border"-->
+                <!--app:layout_constraintTop_toBottomOf="@id/distanceInfo"-->
+                <!--app:layout_constraintLeft_toLeftOf="parent"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_marginLeft="20dp"-->
+                <!--android:id="@+id/titleInfo"-->
+                <!--android:gravity="center"-->
+                <!--android:textSize="12sp"-->
+                <!--android:textColor="#000"-->
+                <!--android:textStyle="bold"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--/>-->
+            <!--&lt;!&ndash;<Button&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_weight="1"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_marginLeft="20dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:text="导航"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:background="@drawable/button_style"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_marginTop="5dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:id="@+id/navi"&ndash;&gt;-->
+                <!--&lt;!&ndash;app:layout_constraintRight_toRightOf="parent"&ndash;&gt;-->
+                <!--&lt;!&ndash;/>&ndash;&gt;-->
+            <!--<LinearLayout-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="1"-->
+                 <!--android:id="@+id/navi"-->
+                <!--android:layout_marginLeft="20dp"-->
+                <!--android:layout_marginTop="5dp"-->
+                <!--android:orientation="vertical"-->
+                <!--android:gravity="center"-->
+                <!--&gt;-->
+                <!--<ImageView-->
+                    <!--android:layout_width="35dp"-->
+                    <!--android:layout_height="35dp"-->
+                    <!--android:src="@mipmap/navi"-->
+                    <!--/>-->
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="去这里"-->
+                    <!--android:textColor="#000"-->
+                    <!--android:gravity="center"-->
+                    <!--/>-->
+            <!--</LinearLayout>-->
+
+
+        <!--</LinearLayout>-->
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--app:layout_constraintWidth_percent="0.28"-->
+            <!--android:layout_height="0dp"-->
+            <!--app:layout_constraintHeight_percent="0.4"-->
+            <!--android:maxLines="1"-->
+            <!--android:background="@drawable/border"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--android:layout_marginBottom="10dp"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:id="@+id/streetInfo"-->
+            <!--android:gravity="center"-->
+            <!--android:textColor="#000"-->
+            <!--/>-->
 
     </android.support.constraint.ConstraintLayout>
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="配置"
+        android:orientation="vertical"
+        app:layout_constraintWidth_percent="0.15"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:id="@+id/configuration"
+        android:gravity="center"
+        android:background="@drawable/button_style"
+        >
+        <ImageView
+            android:layout_marginTop="5dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@mipmap/configuration"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="配置"
+            android:textColor="#000"
+            android:gravity="center"
+            android:textSize="12sp"
+            />
+    </LinearLayout>
 
-        />
 
 
 </android.support.constraint.ConstraintLayout>
