--- a/app/src/main/res/layout/activity_stock.xml
+++ b/app/src/main/res/layout/activity_stock.xml
@@ -6,42 +6,47 @@
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:id="@+id/Layout"
+    android:background="#fff"
     >
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue"
+        android:background="@drawable/top_bottom"
+        app:layout_constraintBottom_toTopOf="@id/out"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:text="入库"
         android:id="@+id/enter"
+        android:layout_marginBottom="10dp"
         />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/out"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/enter"
-        android:background="@color/blue"
+        android:background="@drawable/top_bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:text="出库"
         />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/out"
-        android:background="@color/littlePurple"
+        app:layout_constraintBottom_toTopOf="@id/enter"
+        android:background="#eee"
         android:focusable="true"
         android:gravity="center"
         android:id="@+id/EText"
+        android:layout_marginBottom="10dp"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/EText"
-        android:background="@color/littlePurple"
+        app:layout_constraintBottom_toTopOf="@id/EText"
+        android:background="#eee"
         android:id="@+id/text1"
         android:gravity="center"
+        android:layout_marginBottom="10dp"
         />
 
 </android.support.constraint.ConstraintLayout>
