--- a/app/src/main/res/layout/activity_weather_aboutlife.xml
+++ b/app/src/main/res/layout/activity_weather_aboutlife.xml
@@ -2,12 +2,14 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#fff"
+    >
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/textview_border"
+        android:background="@drawable/border_bottom_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.125"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -23,7 +25,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/textview_border"
+        android:background="@drawable/border_bottom_black"
         app:layout_constraintHeight_percent="0.125"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -37,7 +39,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/textview_border"
+        android:background="@drawable/border_bottom_black"
         app:layout_constraintHeight_percent="0.125"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -51,7 +53,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/textview_border"
+        android:background="@drawable/border_bottom_black"
         app:layout_constraintHeight_percent="0.125"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -65,7 +67,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/textview_border"
+        android:background="@drawable/border_bottom_black"
         app:layout_constraintHeight_percent="0.125"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -79,7 +81,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/textview_border"
+        android:background="@drawable/border_bottom_black"
         app:layout_constraintHeight_percent="0.125"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -94,7 +96,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/textview_border"
+        android:background="@drawable/border_bottom_black"
         app:layout_constraintHeight_percent="0.125"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -108,7 +110,6 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/textview_border"
         app:layout_constraintHeight_percent="0.125"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
